--- a/reserva.html
+++ b/reserva.html
@@ -13,8 +13,8 @@
         <div class="calendario">
             <header>
                 <h2 id="mes">Abril</h2>
-                    <a class="bnt_ant" id="bnt_ant"><</a>
-                    <a class="bnt_pro" id="bnt_pro">></a>
+                    <a class="bnt_ant" id="bnt_ant">&#60;</a>
+                    <a class="bnt_pro" id="bnt_pro">&gt;</a>
             </header>
             <table>
                 <thead><!--separa do resto do codigo,dizendo que é um cabeçalho-->
