--- a/index.html
+++ b/index.html
@@ -101,9 +101,8 @@
     <div class="sob">
         <div class="pos"></div>
         <h1>Pousada Ypuã</h1>
-        
         <p> Venha conhecer a Pousada do Ypua, um verdadeiro refúgio de tranquilidade e beleza natural!  </p>
-        <a href="reserva.html"><button>Fazer reserva</button></a>
+        <a href="reserva.html"><button class="reserva">Fazer reserva</button></a>
     </div>
 
     <div class="container"> 
