--- a/teste-calendario.html
+++ b/teste-calendario.html
@@ -9,11 +9,13 @@
 <body>
     <h1>Calendário de Seleção</h1>
 
-    
-    <div id="calendario">
-            <button id="bnt_ant">&#60;</button>
+    <div class="conteudo">
+    <div class="calendario">
+        <header>
+            <button class="bnt_ant" id="bnt_ant">&#60;</button>
             <span id="mes"></span> <span id="ano"></span>
-            <button id="bnt_pro">&gt;</button>
+            <button class="bnt_pro" id="bnt_pro">&gt;</button>
+        </header>
             <table>
                 <thead>
                     <tr>
@@ -32,6 +34,7 @@
         </div>
 
     </div>
+</div>
 
     <script>
         let data = new Date();
