--- a/teste-calendario.html
+++ b/teste-calendario.html
@@ -26,7 +26,7 @@
             </table>
         
 
-        <button id="confirmar">Confirmar Seleção</button>
+        <button id="confirmar" class="botao">Confirmar Seleção</button>
     
         <div id="info">
             <p id="diaSelecionado">Primeiro dia selecionado: Nenhum</p>
