--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
         <div class="pos"></div>
         <h1>Pousada Ypuã</h1>
         <p> Venha conhecer a Pousada do Ypua, um verdadeiro refúgio de tranquilidade e beleza natural!  </p>
-        <a href="reserva.html"><button class="reserva">Fazer reserva</button></a>
+        <a href="calendario.html"><button class="reserva">Fazer reserva</button></a>
     </div>
 
     <div class="container"> 
