--- a/calendario.html
+++ b/calendario.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calendário de Seleção</title>
     <link rel="stylesheet" href="estilo-calendario.css">
+    <link rel="icon" href="imagens/favicon-16x16.png" type="image/png">
 </head>
 <body>
     <h1>Calendário de Seleção</h1>
