--- a/PagFuncionario.html
+++ b/PagFuncionario.html
@@ -6,6 +6,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="grafico.css">
     <script src="grafico.js"></script>
+    <link rel="icon" href="imagens/favicon-16x16.png" type="image/png">
 </head>
 <body>
     <div id="chart-container">
