--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Ypuã_pousada</title>
     <link rel="stylesheet" href="style.css">
     <script src="login.js"></script>
+    <link rel="icon" href="imagens/favicon-16x16.png" type="image/png">
 </head>
 <body>
   <div class="menu">
