--- a/index.html
+++ b/index.html
@@ -8,8 +8,13 @@
     <script src="login.js"></script>
     <link rel="icon" href="imagens/favicon-16x16.png" type="image/png">
 </head>
-<body>
+<body> 
+
+
   <div class="menu">
+    <div class="logo1"> 
+      <img class="logo" src="imagens/android-chrome-192x192.png" alt="logo">
+    </div>
     <button class="funcionario" id="funcionarioBtn">Funcionário</button>
     <button class="login" id="loginBtn">Login</button>
   </div>
@@ -180,6 +185,11 @@
             </div>
     </div>
   </div>    
+    <footer>
+      <img src="imagens/android-chrome-192x192.png" alt="logoYpuã" class="logo2">
+      <p>Contatos:</p>
+ 
 
+ </footer>
 </body>
 </html>
