--- a/index.html
+++ b/index.html
@@ -170,10 +170,30 @@
     </div>
   </div>    
     <footer>
-      <img src="imagens/android-chrome-192x192.png" alt="logoYpuã" class="logo2">
-      <p>Contatos:</p>
- 
-
+      <table>
+        <div class="footer-container">
+          <div class="footer-content">
+            <div class="contact-info">
+              <div class="contact-item">
+                <h3>Email</h3>
+                <p>YpuãPousada@gmail.com</p>
+              </div>
+              <div class="contact-item">
+                <h3>WhatsApp</h3>
+                <p>(35) 4002-8922</p>
+              </div>
+              <div class="contact-item">
+                <h3>Instagram</h3>
+                <p>@pypuã</p>
+              </div>
+              <div class="contact-item">
+                <h3>Facebook</h3>
+                <p>Ypuã Pousada</p>
+              </div>
+            </div>
+            <img src="imagens/android-chrome-192x192.png" alt="logoYpuã" class="logo2">
+          </div>
+        </div>
  </footer>
 </body>
 </html>
