--- a/calendario.html
+++ b/calendario.html
@@ -8,7 +8,7 @@
     <link rel="icon" href="imagens/favicon-16x16.png" type="image/png">
 </head>
 <body>
-    <h1>Calendário de Seleção</h1>
+    <h1>check-in e check-out:</h1>
 
     <div class="conteudo">
     <div class="calendario">
@@ -27,7 +27,7 @@
             </table>
         
 
-        <button id="confirmar" class="botao">Confirmar</button>
+        <a href="pagina-quartos.html" class="botao" id="confirmar">Continuar</a>
         <div id="info">
             <p id="diaSelecionado">Primeiro dia selecionado: Nenhum</p>
             <p id="diaFinalSelecionado">Segundo dia selecionado: Nenhum</p>
