--- a/calendario.html
+++ b/calendario.html
@@ -25,9 +25,9 @@
                 </thead>
                 <tbody id="dias"></tbody>
             </table>
-        
-
-        <a href="pagina-quartos.html" class="botao" id="confirmar">Continuar</a>
+        <div class="botao">
+        <a href="pagina-quartos.html" class="botao1" id="confirmar">Continuar</a>
+        </div>
         <div id="info">
             <p id="diaSelecionado">Primeiro dia selecionado: Nenhum</p>
             <p id="diaFinalSelecionado">Segundo dia selecionado: Nenhum</p>
