--- a/pagina-quartos.html
+++ b/pagina-quartos.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Acomodaçoes</title>
     <link rel="stylesheet" href="quartos.css">
+    <link rel="icon" href="imagens/favicon-16x16.png" type="image/png">
 </head>
 <body>
-    <h1>Acomodaçoes</h1>
+    <h1>Acomodações</h1>
     <!-- Barra de pesquisa -->
     <input type="text" id="searchBar" placeholder="Pesquisar quarto..." onkeyup="filterQuartos()">
     <div class="coluna">
