Arru,ei um trem ai bento

--- a/pagina-quartos.html
+++ b/pagina-quartos.html
@@ -9,15 +9,17 @@
 </head>
 <body>
     <h1>Acomodações</h1>
-    <!-- Barra de pesquisa -->
+    <div class="lupa1">
+    <img class="lupa" src="imagens/lupa.png" alt="">
     <input type="text" id="searchBar" placeholder="Pesquisar quarto..." onkeyup="filterQuartos()">
+    </div>
     <div class="coluna">
         <div class="quarto">
             <img class="quartos" src="imagens/Domo.jpeg" alt="">
             <div class="info">
                 <h2>Domo</h2>
                 <p>Domo é a grande novidade da pousada. Uma acomodação totalmente diferenciada construída nos padrões arquitetônicos dos domos geodésicos modernos</p>
-                <p>a partir de R$100</p>
+                <b><p>a partir de R$100</p></b>
             </div>
         </div>
         <button class="reservar-btn">reservar</button>
@@ -27,8 +29,8 @@
             <img class="quartos" src="imagens/Churras.jpeg" alt="">
             <div class="info">
                 <h2>Churas (Bus)</h2>
-                <p>Alguns detalhes que acompanham esta acomodação especial: Roupas de cama; Roupas de banho; Banheira de hidromassagem; Cozinha básica; Taças; Churrasqueira; Televisão; Soundbar Jbl Cinema; Cafeteira com cápsula; Rede de descanso; Área com vista para o mar; Deck externo com fogueira; Acompanha uma cesta de café da manhã.</p>
-                <p>a partir de R$200</p>
+                <p>Alguns detalhes que acompanham esta acomodação especial: Roupas de cama; Roupas de banho; Banheira de hidromassagem; Cozinha básica;<br> Taças; Churrasqueira; Televisão; Soundbar Jbl Cinema; Cafeteira com cápsula; Rede de descanso; Área com vista para o mar; Deck externo com fogueira;<br> Acompanha uma cesta de café da manhã.</p>
+                <b><p>a partir de R$200</p></b>
             </div>
         </div>
         <button class="reservar-btn">reservar</button>
@@ -38,7 +40,7 @@
             <img class="quartos" src="imagens/cabana.jpg" alt="">
             <div class="info">
                 <h2>Cabana</h2>
-                <p>Possui cama de casal, uma cama de solteiro, cama extra, ar-condicionado, TV, cozinha com utensílios básicos e banheiro. Na área externa possui varanda e deck com churrasqueira, tendo ampla vista para o mar. A acomodação é ideal para três pessoas, podendo comportar até quatro.</p>
+                <p>Possui cama de casal, uma cama de solteiro, cama extra, ar-condicionado, TV, cozinha com utensílios básicos e banheiro. <br> Na área externa possui varanda e deck com churrasqueira, tendo ampla vista para o mar. <br>A acomodação é ideal para três pessoas, podendo comportar até quatro.</p>
             </div>
         </div>
         <button class="reservar-btn">reservar</button>
