--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width", initial-scale="1.0">
-    <title>Ypuã_pousada</title>
+    <title>Ypuã Pousada</title>
     <link rel="stylesheet" href="style.css">
     <script src="login.js"></script>
     <link rel="icon" href="imagens/favicon-16x16.png" type="image/png">
