--- a/PagFuncionario.html
+++ b/PagFuncionario.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Página Funcionário</title>
     <link rel="stylesheet" href="grafico.css">
     <script src="grafico.js"></script>
     <link rel="icon" href="imagens/favicon-16x16.png" type="image/png">
@@ -13,7 +13,7 @@
         <canvas id="myChart"></canvas>
     </div>
     <button id="updateButton">Atualizar Dados</button>
-    <p>Soma do mês: <span id="monthlySum"></span></p>
+    <p >Soma do mês: <span id="monthlySum"></span></p>
     
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
